# ghealth-cli

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml
skills/google-health/: SKILL.md
src/ghealth/: __init__.py  cli.py  config.py  data_types.py  output.py
src/ghealth/api/: __init__.py  client.py  data_points.py  dates.py  errors.py  names.py  paired_devices.py  subscribers.py  subscriptions.py  users.py
src/ghealth/auth/: oauth.py  scopes.py  token_store.py
src/ghealth/commands/: agent.py  auth.py  context.py  data_points.py  data_types.py  shared.py  shortcuts.py  users_devices.py  webhooks.py
src/ghealth/data/: data_types.json
tests/: conftest.py  test_auth.py  test_cli.py  test_data_types.py  test_read_cli.py  test_skill.py
tests/api/: test_client.py  test_data_points.py  test_users_devices.py  test_webhooks.py
tests/cli/: test_agent_cli.py  test_core_read.py  test_data_points_read.py  test_data_points_write.py  test_webhooks_cli.py
